[gd_scene load_steps=10 format=3 uid="uid://dxe0cu6snyn44"]

[ext_resource type="Script" uid="uid://bu5qnwpqx40f6" path="res://src/tools/terrain_viewer.gd" id="1_viewer"]

[sub_resource type="Environment" id="Environment_env"]
background_mode = 1
background_color = Color(0.4, 0.5, 0.7, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.45, 0.5, 1)
ambient_light_energy = 0.6
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.6, 0.65, 0.75, 1)
fog_density = 5e-05
fog_sky_affect = 0.1

[sub_resource type="Gradient" id="Gradient_1wggm"]
offsets = PackedFloat32Array(0.2, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_j8pld"]
noise_type = 2
frequency = 0.03
cellular_jitter = 3.0
cellular_return_type = 0
domain_warp_enabled = true
domain_warp_type = 1
domain_warp_amplitude = 50.0
domain_warp_fractal_type = 2
domain_warp_fractal_lacunarity = 1.5
domain_warp_fractal_gain = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mbavm"]
noise = SubResource("FastNoiseLite_j8pld")
color_ramp = SubResource("Gradient_1wggm")
seamless = true

[sub_resource type="Terrain3DMaterial" id="Terrain3DMaterial_0kq3t"]
_shader_parameters = {
&"bias_distance": 512.0,
&"blend_sharpness": 0.5,
&"depth_blur": 0.0,
&"enable_macro_variation": true,
&"enable_projection": true,
&"flat_terrain_normals": false,
&"macro_variation1": Color(1, 1, 1, 1),
&"macro_variation2": Color(1, 1, 1, 1),
&"macro_variation_slope": 0.333,
&"mipmap_bias": 1.0,
&"noise1_angle": 0.0,
&"noise1_offset": Vector2(0.5, 0.5),
&"noise1_scale": 0.04,
&"noise2_scale": 0.076,
&"noise_texture": SubResource("NoiseTexture2D_mbavm"),
&"projection_threshold": 0.8
}
show_checkered = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xde3s"]
transparency = 4
cull_mode = 2
vertex_color_use_as_albedo = true
backlight_enabled = true
backlight = Color(0.5, 0.5, 0.5, 1)
distance_fade_mode = 1
distance_fade_min_distance = 128.0
distance_fade_max_distance = 96.0

[sub_resource type="Terrain3DMeshAsset" id="Terrain3DMeshAsset_kddvp"]
generated_type = 1
height_offset = 0.5
material_override = SubResource("StandardMaterial3D_xde3s")
last_lod = 0
last_shadow_lod = 0
lod0_range = 128.0

[sub_resource type="Terrain3DAssets" id="Terrain3DAssets_frdjl"]
mesh_list = Array[Terrain3DMeshAsset]([SubResource("Terrain3DMeshAsset_kddvp")])

[node name="TerrainViewer" type="Node3D"]
script = ExtResource("1_viewer")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 500, 1000, 500)
light_energy = 1.2
shadow_enabled = true
shadow_opacity = 0.7
directional_shadow_max_distance = 5000.0

[node name="FlyCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, 0, 200, 300)
far = 10000.0

[node name="Terrain3D" type="Terrain3D" parent="."]
material = SubResource("Terrain3DMaterial_0kq3t")
assets = SubResource("Terrain3DAssets_frdjl")
show_checkered = true
top_level = true
metadata/_edit_lock_ = true

[node name="CellObjects" type="Node3D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LoadingOverlay" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="VBox" type="VBoxContainer" parent="UI/LoadingOverlay"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingLabel" type="Label" parent="UI/LoadingOverlay/VBox"]
layout_mode = 2
text = "Loading..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="UI/LoadingOverlay/VBox"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/LoadingOverlay/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Initializing..."
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_bottom = 800.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Terrain Viewer"

[node name="HSeparator" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="CoordsLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Cell Coordinates:"

[node name="CoordsContainer" type="HBoxContainer" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="XLabel" type="Label" parent="UI/Panel/VBox/CoordsContainer"]
layout_mode = 2
text = "X:"

[node name="CellXSpin" type="SpinBox" parent="UI/Panel/VBox/CoordsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
value = -2.0

[node name="YLabel" type="Label" parent="UI/Panel/VBox/CoordsContainer"]
layout_mode = 2
text = "Y:"

[node name="CellYSpin" type="SpinBox" parent="UI/Panel/VBox/CoordsContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -100.0
value = -9.0

[node name="RadiusContainer" type="HBoxContainer" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="RadiusLabel" type="Label" parent="UI/Panel/VBox/RadiusContainer"]
layout_mode = 2
text = "Radius:"

[node name="RadiusSpin" type="SpinBox" parent="UI/Panel/VBox/RadiusContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
value = 2.0

[node name="LoadObjectsCheck" type="CheckBox" parent="UI/Panel/VBox"]
layout_mode = 2
button_pressed = true
text = "Load Cell Objects (statics, doors, etc.)"

[node name="LoadTerrainButton" type="Button" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Load Terrain"

[node name="HSeparator1b" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="PreprocessLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Pre-Processing (Next-Gen):"

[node name="PreprocessBtn" type="Button" parent="UI/Panel/VBox"]
layout_mode = 2
tooltip_text = "Convert all Morrowind terrain to Terrain3D format for native LOD/streaming"
text = "Preprocess ALL Terrain"

[node name="PreprocessStatus" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Status: Not checked"

[node name="HSeparator1c" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="MultiPreprocessLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Multi-Terrain (Infinite Worlds):"

[node name="MultiPreprocessBtn" type="Button" parent="UI/Panel/VBox"]
layout_mode = 2
tooltip_text = "Divide terrain into chunks for unlimited world size streaming. Use this for games larger than Morrowind."
text = "Preprocess for Infinite Worlds"

[node name="MultiPreprocessStatus" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Status: Not checked"

[node name="HSeparator2" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="QuickLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Quick Load:"

[node name="QuickButtons" type="GridContainer" parent="UI/Panel/VBox"]
layout_mode = 2
columns = 2

[node name="SeydaNeenBtn" type="Button" parent="UI/Panel/VBox/QuickButtons"]
layout_mode = 2
text = "Seyda Neen"

[node name="BalmoraBtn" type="Button" parent="UI/Panel/VBox/QuickButtons"]
layout_mode = 2
text = "Balmora"

[node name="VivecBtn" type="Button" parent="UI/Panel/VBox/QuickButtons"]
layout_mode = 2
text = "Vivec"

[node name="OriginBtn" type="Button" parent="UI/Panel/VBox/QuickButtons"]
layout_mode = 2
text = "Origin (0,0)"

[node name="HSeparator3" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Statistics:"

[node name="StatsText" type="RichTextLabel" parent="UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
bbcode_enabled = true
text = "No terrain loaded"

[node name="HSeparator4" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Controls:"

[node name="ControlsText" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Hold Right Click to look
WASD to move
Space/Shift for up/down
Ctrl for speed boost"

[node name="HSeparator5" type="HSeparator" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="LogLabel" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2
text = "Log:"

[node name="LogText" type="RichTextLabel" parent="UI/Panel/VBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Initializing..."
scroll_following = true
